# 01-fastapi-url-shortener

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run_tests.py  test_debug.py  url_shortener.db
app/: __init__.py  database.py
app/core/: auth.py
app/crud/: __init__.py  analytics.py  url.py  user.py
app/middleware/: analytics.py
app/models/: __init__.py  analytics.py  url.py  user.py
app/routers/: __init__.py  auth.py  shortener.py
app/schemas/: __init__.py  analytics.py  url.py  user.py
docs/: TESTING.md  TUTORIALS-PHASE-1.md  TUTORIALS-PHASE-2.md  TUTORIALS-PHASE-3.md  plan.md
tests/: __init__.py  test_analytics.py  test_auth.py  test_crud.py  test_shortener.py
