[project]
name = "01-fastapi-url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.2",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "validators>=0.28.0",
    "email-validator>=2.0.0",
    "werkzeug>=2.0.0",
    "user-agents>=2.2.0",
    "PyJWT>=2.0.0",
]

[dependency-groups]
dev = [
    "user-agents>=2.2.0",
    "werkzeug>=3.1.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=4.0.0",
]
